# PyDominion

./: README.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: styling.yml  version.yml
bots/: bigmoney.py
dominion/: __init__.py  deck.py  errors.py  event.py  game.py  player.py  report.py
dominion/base/: __init__.py  action.py  card.py  curse.py  standard.py  treasure.py  victory.py
dominion/cards/: action.py  card.py  curse.py  treasure.py  victory.py
dominion/cards/expansions/: first_edition.py  intrigue_first_edition.py  second_edition.py
dominion/versions/: first_edition.py  intrigue_second_edition.py  second_edition.py
