[tool.poetry]
name = "PyDominion"
version = "0.1.0"
description = "Play the infamous medieval strategy game in Python!"
authors = ["Nate <minecraftcrusher100@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "arguments-differ",
]
